src/test/resources/purescript_examples/passing/JSReserved.purs.psi
Purescript File
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
            PsiElement(proper name)('Eff')
            PsiElement(.)('.')
            PsiElement(proper name)('Console')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSValueRefImpl(ValueRef)
            PSIdentifierImpl(identifier)
              PsiElement(identifier)('log')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('yield')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSNumericLiteralImpl(NumericLiteral)
              PsiElement(natural)('0')
              PsiElement(whitespace)('\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('member')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSNumericLiteralImpl(NumericLiteral)
              PsiElement(natural)('1')
              PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('public')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PsiElement(\)('\')
            PSAbsImpl(Abs)
              PSIdentifierImpl(GenericIdentifier)
                PsiElement(identifier)('return')
                PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PSValueImpl(Value)
              PSPrefixValueImpl(PrefixValue)
                PSVarImpl(Var)
                  PSQualifiedImpl(Qualified)
                    PSIdentifierImpl(identifier)
                      PsiElement(identifier)('return')
                      PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('this')
          PsiElement(whitespace)(' ')
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('catch')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSQualifiedImpl(Qualified)
                PSIdentifierImpl(identifier)
                  PsiElement(identifier)('catch')
                  PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PSIdentifierImpl(identifier)
          PsiElement(identifier)('main')
          PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSQualifiedImpl(Qualified)
                PSIdentifierImpl(identifier)
                  PsiElement(identifier)('log')
                  PsiElement(whitespace)(' ')
            PSStringLiteralImpl(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
