src/test/resources/purescript_examples/failing/Object.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith PropertyIsMissing\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('o')
        PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSQualifiedImpl(Qualified)
                PsiElement(identifier)('o')
            PSAccessorImpl(Accessor)
              PsiElement(.)('.')
              PSIdentifierImpl(identifier)
                PsiElement(identifier)('foo')
              PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PsiElement(identifier)('test1')
        PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSQualifiedImpl(Qualified)
                PsiElement(identifier)('test')
                PsiElement(whitespace)(' ')
            PSObjectLiteralImpl(ObjectLiteral)
              PsiElement({)('{')
              PsiElement(})('}')
              PsiElement(whitespace)('\n')
